Fix menu rendering on small screens (#273)

--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -163,3 +163,19 @@ margin-bottom: 20px;
   max-width: 100%;
   border: 0.1em solid;
 }
+@media screen and (max-width: 780px) {
+  .navbar-header {
+    margin-top: 5px;
+    margin-left: 5px !important;
+  }
+  .navbar .container {
+    display: flex;
+  }
+  .navbar-right {
+    position: absolute;
+    right: 50px !important;
+  }
+  .custom-menu-content {
+    top: 20px;
+  }
+}
